--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 	<head>
 		<meta charset="utf-8">
 		<title>San Joaquin Valley Town Hall</title>
-		<link rel="shortcut icon" href="images/favicon.ico">
+		<link rel="shortcut icon" href="favicon.ico">
 		<link rel="stylesheet" href="main.css">
 	</head>
 	
 	<body>
 	<header>
-		<img src="images/town_hall_logo.gif" alt="Town Hall Logo" height="80">
+		<img src="town_hall_logo.gif" alt="Town Hall Logo" height="80">
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <em class="shadow">75<sup>th</sup></em> Year</h3>
 	</header>
@@ -34,13 +34,13 @@
 		<h1>This season's guest speakers</h1>
 
 		<h2>October<br><a href="speakers/toobin.html">Jeffrey Toobin</a></h2>
-		<img src="images/speakers/toobin75.jpg" alt="Jeffrey Toobin photo">
+		<img src="speakers/toobin75.jpg" alt="Jeffrey Toobin photo">
 
 		<h2>November<br><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></h2>
-		<img src="images/speakers/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
+		<img src="speakers/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
 		
 		<h2>January<br><a href="speakers/chua.html">Amy Chua</a></h2>
-		<img src="images/speakers/chua75.jpg" alt="Amy Chua photo">
+		<img src="speakers/chua75.jpg" alt="Amy Chua photo">
 
 	</main>
 	<footer>
