--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	</main>
 	<footer>
 		<p>&copy; 2018, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
-		<p>&copy; 2021, Melody Chirinos</p>
+		<p>&copy; 10/15/2021, Melody Chirinos</p>
 	</footer>
 </body>
 </html>
