--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	
 	<body>
 	<header>
-		<img src="town_hall_logo.gif" alt="Town Hall Logo" height="80">
+		<img src="images/town_hall_logo.gif" alt="Town Hall Logo" height="80">
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <em class="shadow">75<sup>th</sup></em> Year</h3>
 	</header>
@@ -33,13 +33,13 @@
 
 		<h1>This season's guest speakers</h1>
 
-		<h2>October<br><a href="speakers/toobin.html">Jeffrey Toobin</a></h2>
+		<h2>October<br><a href="images/speakers/toobin.html">Jeffrey Toobin</a></h2>
 		<img src="speakers/toobin75.jpg" alt="Jeffrey Toobin photo">
 
-		<h2>November<br><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></h2>
+		<h2>November<br><a href="images/speakers/sorkin.html">Andrew Ross Sorkin</a></h2>
 		<img src="speakers/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
 		
-		<h2>January<br><a href="speakers/chua.html">Amy Chua</a></h2>
+		<h2>January<br><a href="images/speakers/chua.html">Amy Chua</a></h2>
 		<img src="speakers/chua75.jpg" alt="Amy Chua photo">
 
 	</main>
