--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 
 		<h1>This season's guest speakers</h1>
 
-		<h2>October<br><a href="images/speakers/toobin.html">Jeffrey Toobin</a></h2>
-		<img src="speakers/toobin75.jpg" alt="Jeffrey Toobin photo">
+		<h2>October<br><a href="speakers/toobin.html">Jeffrey Toobin</a></h2>
+		<img src="images/speakers/toobin75.jpg" alt="Jeffrey Toobin photo">
 
-		<h2>November<br><a href="images/speakers/sorkin.html">Andrew Ross Sorkin</a></h2>
-		<img src="speakers/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
+		<h2>November<br><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></h2>
+		<img src="images/speakers/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
 		
 		<h2>January<br><a href="images/speakers/chua.html">Amy Chua</a></h2>
-		<img src="speakers/chua75.jpg" alt="Amy Chua photo">
+		<img src="images/speakers/chua75.jpg" alt="Amy Chua photo">
 
 	</main>
 	<footer>
