--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 	<h1>This season's guest speakers</h1>
 	
 	<h2>October<br><a href="toobin.html">Jeffrey Toobin</a></h2>
-	<img src="images/toobin75.jpg" alt="Toobin">
+	<img src="images/speakers/toobin75.jpg" alt="Jeffrey Toobin photo">
 	
 	<h2>November<br><a href="sorkin.html">Andrew Ross Sorkin</a></h2>
-	<img src="images/sorkin75.jpg" alt="Sorkin">
+	<img src="images/speakers/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
 	
 	<h2>January<br><a href="chua.html">Amy Chua</a></h2>
-	<img src="images/chua75.jpg" alt="Chua">
+	<img src="images/speakers/chua75.jpg" alt="Amy Chua phot">
 
 </main>
 <footer>
